crates/hir-ty/tests/snapshots/jls_members__covariant_tobuilder_diamond.snap
---
source: crates/hir-ty/tests/jls_members.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

interface Builder<C, B> {
    C build();
}

interface ComponentBuilder<C, B> {
    C build();
}

interface Buildable<C, B> {
    B toBuilder();
}

interface Component {
    ComponentBuilder<?, ?> toBuilder();
}

interface BuildableComponent<C extends BuildableComponent<C, B>, B extends ComponentBuilder<C, B>>
    extends Buildable<C, B>, Component {
    @Override
    B toBuilder();
}

interface ScopedComponent<C> extends Component {
}

interface TranslatableComponent
    extends BuildableComponent<TranslatableComponent, TranslatableComponent.Builder>,
        ScopedComponent<TranslatableComponent> {
    interface Builder extends ComponentBuilder<TranslatableComponent, Builder> {
    }
}

class Body {
    void test(TranslatableComponent component) {
        TranslatableComponent.Builder b = component.toBuilder();
    }
}

method test(com.example.TranslatableComponent): void
  locals: l0: com.example.TranslatableComponent | l1: com.example.TranslatableComponent.Builder
  exprs: e0: com.example.TranslatableComponent | e1: com.example.TranslatableComponent.Builder
